# Bitarray

./: .gitignore  BitarrayExt.opam  LICENSE  README.md  dune-project
.github/: buildocaml.yml
.github/workflows/: buildocaml.yml
src/: .merlin  Bitarray.ml  Bitarray.mli  BitarrayExt.ml  BitarrayExt.mli  Chunk.ml  Profile.ml  dune
test/: .merlin  Test_BitarrayExt.ml  dune
