(library
    (name BitarrayExt)
    (modules Bitarray BitarrayExt)
    (public_name Bitarray)
    (libraries core)
    (wrapped false)
    (synopsis 
        "Fixed size bitarrays with common operations like add and shift."))
(executable
    (name profile)
    (modules Profile)
    (libraries BitarrayExt))
